# api-key-manager

./: .gitignore  PRD.md  README.md  TASK.md  TRD.md  build.sh  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  lib.rs  main.rs  models.rs  store.rs
src/components/: AddKeyModal.tsx  DeleteConfirmModal.tsx  EmptyState.tsx  ErrorBoundary.tsx  KeyTable.tsx  KeyTableRow.tsx  SearchBar.tsx  Toast.tsx
src/context/: KeyContext.tsx
src/hooks/: useClipboard.ts  useToast.ts
src/lib/: tauri.ts
src/types/: index.ts
